<resources>
    <string name="app_name">Dennis CalApp</string>
    <string name="text">0</string>
    <string name="Button">X</string>
    <string name="tan">tan</string>
    <string name="cos">cos</string>
    <string name="factorial">!</string>
    <string name="pi">π</string>
    <string name="log">log</string>
    <string name="In">In</string>
    <string name="RaiseToPower">^</string>
    <string name="e_sign">e</string>
    <string name="root_Symbol">√</string>
    <string name="seven">7</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="division">÷</string>
    <string name="multiplication">x</string>
    <string name="addition">+</string>
    <string name="open_bracket">(</string>
    <string name="close_bracket">)</string>
    <string name="full_stop">.</string>
    <string name="equal_To">=</string>
    <string name="minus">-</string>
    <string name="sin">sin</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="plus">+</string>
</resources>
